<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity">UDACITY</string>
    <string name="slogan1">We Educate At a Global Scale </string>
    <string name="slogan2">Master Job-Ready Skills</string>
    <!--Master job-ready skills - Mastery of In-Demand Skills - Boost your hireability - We Democratize Education-->

    <string name="adr1">2465 Latham St</string>
    <string name="adr2">Mountain View, CA 94043</string>
    <string name="tel">Tel. 650–555–5555</string>
    <string name="website">www.udacity.com</string>
    <string name="udacity_address">Udacity address</string>
</resources>
